fix: improve attribution link contrast

--- a/css/styles.css
+++ b/css/styles.css
@@ -111,4 +111,4 @@ body{
 
 /* Frontend Mentor attribution */
 .attribution { font-size: 0.6875rem; text-align: center; }
-.attribution a { color: hsl(228, 45%, 44%); }
+.attribution a { color: hsl(229, 70%, 29%) }
